--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -45,14 +45,13 @@
       <div class="skillsRow">
         <img class="oddSkillsIcon" src="https://image.flaticon.com/icons/svg/2920/2920242.svg" alt="Coding icon">
         <h3> <span class="underlined">Development Languages</span> </h3>
-        <p>C++⭐⭐⭐⭐⭐
-          Python⭐⭐⭐
+        <p>C++⭐⭐⭐⭐
+          Python⭐⭐⭐⭐
           C⭐⭐
           Java⭐⭐
           MATLAB⭐ <br>
           HTML(5)⭐⭐⭐⭐
-          CSS(3)⭐⭐⭐⭐
-          Javascript⭐⭐</p>
+          CSS(3)⭐⭐⭐⭐</p>
       </div>
       <div class="skillsRow">
         <img class="evenSkillsIcon" src="https://image.flaticon.com/icons/svg/541/541950.svg" alt="Computer Icon">
@@ -129,12 +128,30 @@
       <h2>Projects</h2>
         <p>
           <span class="bold">C-based Language Compiler</span>
-          <span style="projectLinks"><a href="https://github.com/TimothyJan/FakeLanguageCompiler">Github</a></span>
           <span style="float:right">C++</span>
+          <span style="projectLinks"><a href="https://github.com/TimothyJan/FakeLanguageCompiler">Github</a></span>
           <ul>
             <li>Created components of a compiler for a made-up C-based language. </li>
             <li>Lexical Analyzer parses through the source code and outputs each lexeme and its appropriate token. It strips extraneous characters from source code, breaks up the source code into meaningful units called tokens and implements the Deterministic Finite State Machine to classify each of the lexemes with appropriate tokens. </li>
             <li>Syntax Analyzer parses through source code to determine if it is syntactically correct. I rewrote the grammar to remove any left recursion and ambiguity. I created a predictive table with the First and Follow sets of the rewritten grammar. The Top-Down Syntax Analyzer parses through the source code, uses a stack and prints out the tokens/lexemes and all the production rules used for analyzing the tokens. </li>
+          </ul>
+        </p>
+        <p>
+          <span class="bold">Trivia App</span>
+          <span><a href="https://github.com/TimothyJan/Trivia-App">Github</a></span>
+          <span style="float:right">Python</span>
+          <ul>
+            <li>True or False Trivia app using Python Tkinter and Open Trivia Database API(https://opentdb.com/). 10 questions about random topics generated from the Open Trivia Database. Practice for Python TKinter and APIs.</li>
+          </ul>
+        </p>
+        <p>
+          <span class="bold">Python Turtle Games</span>
+          <span style="float:right">Python</span>
+          <ul>
+            <li><a href="https://github.com/TimothyJan/Turtle-Crossing">Turtle Crossing</a></li>
+            <li><a href="https://github.com/TimothyJan/Pong-Game">Pong</a></li>
+            <li><a href="https://github.com/TimothyJan/Snake-Game">Snake</a></li>
+            <li><a href="https://github.com/TimothyJan/US-States-Game">US States Guessing Game</a></li>
           </ul>
         </p>
     </div>
