Update Skills and Projects

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           C⭐⭐
           Java⭐⭐
           MATLAB⭐ <br>
-          HTML(5)⭐⭐⭐⭐
-          CSS(3)⭐⭐⭐⭐</p>
+          HTML(5)⭐⭐⭐
+          CSS(3)⭐⭐⭐</p>
       </div>
       <div class="skillsRow">
         <img class="evenSkillsIcon" src="https://image.flaticon.com/icons/svg/541/541950.svg" alt="Computer Icon">
