Added Tinder Swiper Bot

--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
           </ul>
         </p>
         <p>
+          <span class="bold">Tinder Swiper Bot</span>
+          <span><a href="https://github.com/TimothyJan/Tinder-Swiper-Bot" rel="noreferrer noopener" target="_blank">Github</a></span>
+          <span style="float:right">Python</span>
+          <ul>
+            <li>Automated swiping on <span><a href="https://tinder.com/" rel="noreferrer noopener" target="_blank">Tinder</a></span> using Python Selenium. Bot will automatically log into Tinder using your Facebook email/password and swipe for you.</li>
+          </ul>
+        </p>
+        <p>
           <span class="bold">Trivia App</span>
           <span><a href="https://github.com/TimothyJan/Trivia-App" rel="noreferrer noopener" target="_blank">Github</a></span>
           <span style="float:right">Python</span>
