Python Selenium Projects update

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
     <div class="career">
       <h2>Projects</h2>
         <p>
+          <span class="bold">Python Selenium Projects</span>
+          <span style="float:right">Python</span>
+          <ul>
+            <li><span><a href="https://github.com/TimothyJan/Tinder-Swiper-Bot" rel="noreferrer noopener" target="_blank">Tinder Swiper Bot</a></span>
+               - Automated swiping on <span><a href="https://tinder.com/" rel="noreferrer noopener" target="_blank">Tinder</a></span>. Bot will automatically log into Tinder using your Facebook email/password and swipe for you.</li>
+            <li><span><a href="https://github.com/TimothyJan/Internet-Speed-Twitter-Complaint_bot" rel="noreferrer noopener" target="_blank">Internet Speed Twitter Complaint Bot</a></span>
+               - Bot that gets your internet download/upload speed using <span><a href="https://www.speedtest.net/" rel="noreferrer noopener" target="_blank">SpeedTest</a></span> and complains to <span><a href="https://twitter.com/" rel="noreferrer noopener" target="_blank">Twitter</a></span> about your Internet Service provider.</li>
+            <li><span><a href="https://github.com/TimothyJan/Cookie-Clicker-bot" rel="noreferrer noopener" target="_blank">Cookie Clicker Bot</a></span>
+               - Automated playing the <span><a href="http://orteil.dashnet.org/experiments/cookie/" rel="noreferrer noopener" target="_blank">Cookie Clicker Game</a></span>. Bot will automatically click the cookie to increase the cookie count and every 5 seconds select the highest item it can purchase. Item costs change as you buy the items so the bot will account for this as well. Every minute the bot will output the cookies/second. Practice with Selenium Webdriver.</li>
+          </ul>
+        </p>
+        <p>
           <span class="bold">C-based Language Compiler</span>
           <span style="float:right">C++</span>
           <span style="projectLinks"><a href="https://github.com/TimothyJan/FakeLanguageCompiler" rel="noreferrer noopener" target="_blank">Github</a></span>
@@ -145,33 +157,11 @@
           </ul>
         </p>
         <p>
-          <span class="bold">Cookie Clicker Bot</span>
-          <span><a href="https://github.com/TimothyJan/Cookie-Clicker-bot" rel="noreferrer noopener" target="_blank">Github</a></span>
+          <span class="bold">Python Games</span>
           <span style="float:right">Python</span>
           <ul>
-            <li>Automated playing the <span><a href="http://orteil.dashnet.org/experiments/cookie/" rel="noreferrer noopener" target="_blank">Cookie Clicker Game</a></span> using Python Selenium. Bot will automatically click the cookie to increase the cookie count and every 5 seconds select the highest item it can purchase. Item costs change as you buy the items so the bot will account for this as well. Every minute the bot will output the cookies/second. Practice with Selenium Webdriver.</li>
-          </ul>
-        </p>
-        <p>
-          <span class="bold">Tinder Swiper Bot</span>
-          <span><a href="https://github.com/TimothyJan/Tinder-Swiper-Bot" rel="noreferrer noopener" target="_blank">Github</a></span>
-          <span style="float:right">Python</span>
-          <ul>
-            <li>Automated swiping on <span><a href="https://tinder.com/" rel="noreferrer noopener" target="_blank">Tinder</a></span> using Python Selenium. Bot will automatically log into Tinder using your Facebook email/password and swipe for you.</li>
-          </ul>
-        </p>
-        <p>
-          <span class="bold">Trivia App</span>
-          <span><a href="https://github.com/TimothyJan/Trivia-App" rel="noreferrer noopener" target="_blank">Github</a></span>
-          <span style="float:right">Python</span>
-          <ul>
-            <li>True or False Trivia app using Python Tkinter and <span><a href = "https://opentdb.com/" rel="noreferrer noopener" target="_blank">Open Trivia Database API.</a></span> 10 questions about random topics generated from the Open Trivia Database. Practice for Python TKinter and APIs.</li>
-          </ul>
-        </p>
-        <p>
-          <span class="bold">Python Turtle Games</span>
-          <span style="float:right">Python</span>
-          <ul>
+            <li><span><a href="https://github.com/TimothyJan/Trivia-App" rel="noreferrer noopener" target="_blank">Trivia App</a></span>
+               - True or False Trivia app using Python Tkinter and <span><a href = "https://opentdb.com/" rel="noreferrer noopener" target="_blank">Open Trivia Database API.</a></span> 10 questions about random topics generated from the Open Trivia Database.</li>
             <li><a href="https://github.com/TimothyJan/Turtle-Crossing" rel="noreferrer noopener" target="_blank">Turtle Crossing</a></li>
             <li><a href="https://github.com/TimothyJan/Pong-Game" rel="noreferrer noopener" target="_blank">Pong</a></li>
             <li><a href="https://github.com/TimothyJan/Snake-Game" rel="noreferrer noopener" target="_blank">Snake</a></li>
