Footer link spacing and Selenium update

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li><span><a href="https://github.com/TimothyJan/Internet-Speed-Twitter-Complaint_bot" rel="noreferrer noopener" target="_blank">Internet Speed Twitter Complaint Bot</a></span>
                - Bot that gets your internet download/upload speed using <span><a href="https://www.speedtest.net/" rel="noreferrer noopener" target="_blank">SpeedTest</a></span> and complains to <span><a href="https://twitter.com/" rel="noreferrer noopener" target="_blank">Twitter</a></span> about your Internet Service provider.</li>
             <li><span><a href="https://github.com/TimothyJan/Cookie-Clicker-bot" rel="noreferrer noopener" target="_blank">Cookie Clicker Bot</a></span>
-               - Automated playing the <span><a href="http://orteil.dashnet.org/experiments/cookie/" rel="noreferrer noopener" target="_blank">Cookie Clicker Game</a></span>. Bot will automatically click the cookie to increase the cookie count and every 5 seconds select the highest item it can purchase. Item costs change as you buy the items so the bot will account for this as well. Every minute the bot will output the cookies/second. Practice with Selenium Webdriver.</li>
+               - Automated playing the <span><a href="http://orteil.dashnet.org/experiments/cookie/" rel="noreferrer noopener" target="_blank">Cookie Clicker Game</a></span>. Bot will automatically click the cookie to increase the cookie count and every 5 seconds select the highest item it can purchase. Item costs change as you buy the items so the bot will account for this as well. Every minute the bot will output the cookies/second.</li>
           </ul>
         </p>
         <p>
