Housing Data Automation project added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
           <span class="bold">Python Selenium Projects</span>
           <span style="float:right">Python</span>
           <ul>
+            <li><span><a href="https://github.com/TimothyJan/Housing-Data-Automation/blob/main/README.md" rel="noreferrer noopener" target="_blank">Housing Data Automation</a></span>
+               - Data Entry Job Automation. Creates a Google spreadsheet with housing prices/address/links using google forms and webscraping on <span><a href="https://www.zillow.com/" rel="noreferrer noopener" target="_blank">Zillow</a></span>.</li>
             <li><span><a href="https://github.com/TimothyJan/Tinder-Swiper-Bot" rel="noreferrer noopener" target="_blank">Tinder Swiper Bot</a></span>
                - Automated swiping on <span><a href="https://tinder.com/" rel="noreferrer noopener" target="_blank">Tinder</a></span>. Bot will automatically log into Tinder using your Facebook email/password and swipe for you.</li>
             <li><span><a href="https://github.com/TimothyJan/Internet-Speed-Twitter-Complaint_bot" rel="noreferrer noopener" target="_blank">Internet Speed Twitter Complaint Bot</a></span>
