--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skillsRow">
-        <img class="oddSkillsIcon" src="https://image.flaticon.com/icons/svg/2920/2920242.svg" alt="Coding icon">
-        <h3> <span class="underlined">Development Languages</span> </h3>
-        <p>C++⭐⭐⭐⭐
-          Python⭐⭐⭐⭐
-          C⭐⭐
-          Java⭐⭐
-          MATLAB⭐ <br>
-          HTML(5)⭐⭐⭐
-          CSS(3)⭐⭐⭐</p>
+        <div class="col-lg-6">
+          <img class="oddSkillsIcon" src="https://image.flaticon.com/icons/svg/2920/2920242.svg" alt="Coding icon">
+        </div>
+        <div class="col-lg-6">
+          <h3> <span class="underlined">Development Languages</span> </h3>
+          <p>C++⭐⭐⭐⭐
+            Python⭐⭐⭐⭐ <br/>
+            C⭐⭐
+            Java⭐⭐
+            HTML(5)/CSS(3)⭐⭐⭐
+            Bootstrap5⭐⭐⭐</p>
+        </div>
       </div>
+
       <div class="skillsRow">
         <img class="evenSkillsIcon" src="https://image.flaticon.com/icons/svg/541/541950.svg" alt="Computer Icon">
         <h3> <span class="underlined">Hardware Design Programs</span> </h3>
