Front End updates

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <span class="bold">Python Selenium Projects</span>
           <span style="float:right">Python</span>
           <ul>
-            <li><span><a href="https://github.com/TimothyJan/Housing-Data-Automation/blob/main/README.md" rel="noreferrer noopener" target="_blank">Housing Data Automation</a></span>
+            <li><span><a href="https://github.com/TimothyJan/Housing-Data-Automation" rel="noreferrer noopener" target="_blank">Housing Data Automation</a></span>
                - Data Entry Job Automation. Creates a Google spreadsheet with housing prices/address/links using google forms and webscraping on <span><a href="https://www.zillow.com/" rel="noreferrer noopener" target="_blank">Zillow</a></span>.</li>
             <li><span><a href="https://github.com/TimothyJan/Tinder-Swiper-Bot" rel="noreferrer noopener" target="_blank">Tinder Swiper Bot</a></span>
                - Automated swiping on <span><a href="https://tinder.com/" rel="noreferrer noopener" target="_blank">Tinder</a></span>. Bot will automatically log into Tinder using your Facebook email/password and swipe for you.</li>
@@ -174,6 +174,18 @@
             <li><a href="https://github.com/TimothyJan/US-States-Game" rel="noreferrer noopener" target="_blank">US States Guessing Game</a></li>
           </ul>
         </p>
+
+        <p>
+          <span class="bold">Front End Development</span>
+          <span style="float:right">Python, HTML(5)/CSS(3)/JS</span>
+          <ul>
+            <li><span><a href="https://github.com/TimothyJan/Start-Bootstrap-Clean-Blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog</a></span>
+               - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>.. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
+            <li><span><a href="https://github.com/TimothyJan/Tindog" rel="noreferrer noopener" target="_blank">Tindog</a></span>
+               - Tinder for Dogs. Practice with Bootstrap 5 for Cards, Grid, Containers, Buttons, Carousel, CSS Z-index and Stacking Order, Media Query Breakpoints and code refactoring.</li>
+          </ul>
+        </p>
+
         <p>
           <span class="bold">Electrocardiography Instrument (ECG amplifier)</span>
           <ul>
