Added Coffee and Wifi

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
           <span class="bold">Front End Development</span>
           <span style="float:right">Python, HTML(5)/CSS(3)/JS</span>
           <ul>
+            <li><span><a href="https://github.com/TimothyJan/Coffee-and-Wifi" rel="noreferrer noopener" target="_blank">Coffee and Wifi</a></span>
+              - Coffee and Wifi project to practice using Flask, WTForms, Bootstrap and CSV. Contains the name, location, opening/closing hours, coffee/wifi/outlet ratings of your favorite coffee shops. Use the secret route "/add" in url to access WTForm to add another item to csv file and cafes page.</li>
             <li><span><a href="https://github.com/TimothyJan/Start-Bootstrap-Clean-Blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog</a></span>
                - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>.. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
             <li><span><a href="https://github.com/TimothyJan/Tindog" rel="noreferrer noopener" target="_blank">Tindog</a></span>
