Added Virtual Bookshelf

--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
     <div class="career">
       <h2>Projects</h2>
         <p>
+          <span class="bold">Front End Development</span>
+          <span style="float:right">Python, HTML(5)/CSS(3)/JS</span>
+          <ul>
+            <li><span><a href="https://github.com/TimothyJan/Virtual-Bookshelf-SQLite" rel="noreferrer noopener" target="_blank">Virtual Bookshelf</a></span>
+              - Virtual bookshelf with ratings of books. Practice with building a SQLite Database(using SQLAlchemy) into a Flask Website.</li>
+            <li><span><a href="https://github.com/TimothyJan/Coffee-and-Wifi" rel="noreferrer noopener" target="_blank">Coffee and Wifi</a></span>
+              - Coffee and Wifi project to practice using Flask, WTForms, Bootstrap and CSV. Contains the name, location, opening/closing hours, coffee/wifi/outlet ratings of your favorite coffee shops. Use the secret route "/add" in url to access WTForm to add another item to csv file and cafes page.</li>
+            <li><span><a href="https://github.com/TimothyJan/Start-Bootstrap-Clean-Blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog</a></span>
+              - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>.. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
+            <li><span><a href="https://github.com/TimothyJan/Tindog" rel="noreferrer noopener" target="_blank">Tindog</a></span>
+              - Tinder for Dogs. Practice with Bootstrap 5 for Cards, Grid, Containers, Buttons, Carousel, CSS Z-index and Stacking Order, Media Query Breakpoints and code refactoring.</li>
+          </ul>
+        </p>
+        <p>
           <span class="bold">Python Selenium Projects</span>
           <span style="float:right">Python</span>
           <ul>
@@ -174,20 +188,6 @@
             <li><a href="https://github.com/TimothyJan/US-States-Game" rel="noreferrer noopener" target="_blank">US States Guessing Game</a></li>
           </ul>
         </p>
-
-        <p>
-          <span class="bold">Front End Development</span>
-          <span style="float:right">Python, HTML(5)/CSS(3)/JS</span>
-          <ul>
-            <li><span><a href="https://github.com/TimothyJan/Coffee-and-Wifi" rel="noreferrer noopener" target="_blank">Coffee and Wifi</a></span>
-              - Coffee and Wifi project to practice using Flask, WTForms, Bootstrap and CSV. Contains the name, location, opening/closing hours, coffee/wifi/outlet ratings of your favorite coffee shops. Use the secret route "/add" in url to access WTForm to add another item to csv file and cafes page.</li>
-            <li><span><a href="https://github.com/TimothyJan/Start-Bootstrap-Clean-Blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog</a></span>
-               - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>.. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
-            <li><span><a href="https://github.com/TimothyJan/Tindog" rel="noreferrer noopener" target="_blank">Tindog</a></span>
-               - Tinder for Dogs. Practice with Bootstrap 5 for Cards, Grid, Containers, Buttons, Carousel, CSS Z-index and Stacking Order, Media Query Breakpoints and code refactoring.</li>
-          </ul>
-        </p>
-
         <p>
           <span class="bold">Electrocardiography Instrument (ECG amplifier)</span>
           <ul>
