--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <li><span><a href="https://github.com/TimothyJan/Coffee-and-Wifi" rel="noreferrer noopener" target="_blank">Coffee and Wifi</a></span>
               - Coffee and Wifi project to practice using Flask, WTForms, Bootstrap and CSV. Contains the name, location, opening/closing hours, coffee/wifi/outlet ratings of your favorite coffee shops. Use the secret route "/add" in url to access WTForm to add another item to csv file and cafes page.</li>
             <li><span><a href="https://github.com/TimothyJan/Start-Bootstrap-Clean-Blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog</a></span>
-              - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>.. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
+              - Blog using <span><a href="https://startbootstrap.com/theme/clean-blog" rel="noreferrer noopener" target="_blank">Start Bootstrap Clean Blog Template</a></span>. Practice with Bootstrap 5 and templating with Jinja in Flask. </li>
             <li><span><a href="https://github.com/TimothyJan/Tindog" rel="noreferrer noopener" target="_blank">Tindog</a></span>
               - Tinder for Dogs. Practice with Bootstrap 5 for Cards, Grid, Containers, Buttons, Carousel, CSS Z-index and Stacking Order, Media Query Breakpoints and code refactoring.</li>
           </ul>
